[tool.poetry]
name = "pyleetcode"
version = "0.1.0"
description = ""
authors = ["Reljod Oreta <oretareljod@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
